--- a/aula04/ex01.html
+++ b/aula04/ex01.html
@@ -17,7 +17,8 @@
     <h1>Olá mundo</h1>
     <p>já me livrei da maldição</p>
     <script>
-        window.alert("minha primeira mensagem")
+       var nome= window.prompt('qual é o seu nome?')
+       window.alert('É um grande prazer te conhecer,'+ nome)
     </script>
     
 </body>
