--- a/aula04/ex03.html
+++ b/aula04/ex03.html
@@ -10,6 +10,8 @@
             font-family: Arial, Helvetica, sans-serif;
             color: blue;
             background-color: greenyellow;
+            text-align: center;
+            font-size: 60px;
         }
     </style>
 </head>
