Criei ex05 e ex06

--- a/aula10/ex05.html
+++ b/aula10/ex05.html
@@ -21,17 +21,18 @@
 </head>
 <body>
     <div id="area">
-        Entaraja
+        Intaraja
 
     </div>
     <script>
         var a= window.document . getElementById('area')
-        a.addEventListener('Click',clicar)
+        a.addEventListener('click', clicar)
         a.addEventListener('mouseenter', entrar)
         a.addEventListener('mouseout', sair)
+
         function clicar(){
             a.innerText ='clicou !'
-            a.style.background ='blak'
+            a.style.background ='red'
         }
         function entrar(){
            a.innerText='Entrou!' 
