--- a/aula09/ex05.html
+++ b/aula09/ex05.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>primeiros passos com DOM</title>
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
             color: blue;
             background-color: greenyellow;
             text-align: center;
-            font-size: 60px;
+            font-size: 40px
         }
     </style>
 </head>
 <body>
-
-
-    <script>
-        var nome=window.prompt('Qual é o seu nome?') //vai pergunta seu nome
-        document.write(`Ola,<strong>${nome}</strong>!seu nome tem ${nome.length} letras.<br/>`)
-        document.write(`Seu nome maiuscula é  ${nome.toUpperCase()}<br/>`)
-        document.write(`Seu nome em minuscula é ${nome.toLowerCase()}<br/>`)
-
-
-    </script>
+    <h1>Iniciando estudos DOM</h1>
+    <p>Aqui vai o resultado</p>
+    <p>Aprendendo usa o <strong>DOM</strong>EM JAVASCRIPT</p>
+    <div>Clique em mim</div>
+    <Script>
+        window.document
+    </Script>
+    
 </body>
 </html>
