--- a/aula13/ex17/ex17.html
+++ b/aula13/ex17/ex17.html
@@ -4,28 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contador</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Vamos Contar</h1>
+        <h1>Tabuada</h1>
 
     </header>
 
     <section>
-        <div id="dados">
-            <p>Início: <input type="number" name="inicio" id="txti"></p>
-            <p>Fim: <input type="number" name="fim" id="txtf"></p>
-            <p>Passo: <input type="number" name="passo" id="txtp"></p>
-            <p><input type="button" value="contar" onclick="contar"></p>
-        </div>
-
-        <div id="res">
-            Preparando a contagem ....
+        <div>
+            <p>Numero: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerrar Tabuada" onclick="tabuada"></p>
 
         </div>
-        
+
+        <div>
+            <select name="tabuada" id="seltab" size="10"></select>
+
+        </div>
+
     </section>
 
     <footer>
