--- a/aula13/ex17/ex17.html
+++ b/aula13/ex17/ex17.html
@@ -16,7 +16,7 @@
     <section>
         <div>
             <p>Numero: <input type="number" name="num" id="txtn">
-            <input type="button" value="Gerrar Tabuada" onclick="tabuada"></p>
+            <input type="button" value="Gerrar Tabuada" onclick="tabuada()"></p>
 
         </div>
 
