--- a/aulatreino/modelo.html
+++ b/aulatreino/modelo.html
@@ -13,24 +13,31 @@
 
     </header>
 
-    <section>
+    <section onclick="dados()">
         <div id="dados">
-            <p>Entrada: <input type="number" name="entradas" id="txte"></p>
+            <p>Entradas: <input type="number" name="n1" id="txtn1"> <input type="button" value="Adicionar"></p>
 
-            <p>Compras: <input type="number" name="compras" id="txtc"></p>
+            <p>Compras: <input type="number" name="n2" id="txtn2"> <input type="button" value="Adicionar" ></p>
 
-            <p>Cartão de Credito: <input type="number" name="cartão de credito" id="txtcr"></p>
+            <p>Cartão de Credito: <input type="number" name="cartão" id="txtca"> <input type="button" value="Adicionar"></p>
 
-            <p>Boletos: <input type="number" name="boletos" id="txtb"></p>
+            <p>Boletos: <input type="number" name="boletos" id="txtb"> <input type="button" value="Adicionar"></p>
 
-            <p>Saidas: <input type="number" name="saidas" id="txts"></p>
+            <p>Saidas: <input type="number" name="saidas" id="txts"><input type="button" value="Adicionar"></p>
+
+            <br> <br><select name="flista" id="flista" size="6"></select>
+            <br> <input type="button" value="finalizar">
             
 
         </div>
 
         <div id="saldo">
-            sssss
+            <p>Saldo: <input type="text" name="Saldo" id="fsaldo"> </p>
             
+        </div id="gastos">
+            <p> Gastos: <input type="text" name="Gastos" id="fgastos"></p>
+        <div>
+
         </div>
 
     </section>
